src/test/ui/regions/regions-early-bound-error.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/regions-early-bound-error.rs:29:5
   |
LL |     g1.get()
   |     ^^^^^^^^
   |
note: ...the reference is valid for the lifetime 'b as defined on the function body at 28:11...
  --> $DIR/regions-early-bound-error.rs:28:11
   |
LL | fn get<'a,'b,G:GetRef<'a, isize>>(g1: G, b: &'b isize) -> &'b isize {
   |           ^^
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 28:8
  --> $DIR/regions-early-bound-error.rs:28:8
   |
LL | fn get<'a,'b,G:GetRef<'a, isize>>(g1: G, b: &'b isize) -> &'b isize {
   |        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
